--- a/configure.in
+++ b/configure.in
@@ -1,13 +1,13 @@
 AC_INIT(configure.in)
 
-AM_INIT_AUTOMAKE(anabbc, 1.00)
+AM_INIT_AUTOMAKE(DigSig, 1.00)
 
 AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
 AC_PROG_CXX([CC g++])
 
 if test $ac_cv_prog_gcc = yes; then
-  CXXFLAGS="$CXXFLAGS -Wall"
+  CXXFLAGS="$CXXFLAGS -Wall -std=c++11"
 fi
 
 ROOTLIBS=`root-config --libs`
