--- a/V1742PRDF/Makefile.am
+++ b/V1742PRDF/Makefile.am
@@ -6,17 +6,24 @@ AM_CXXFLAGS = -g -Wall -Werror -Wextra -Wno-unused-parameter
 
 AM_CPPFLAGS = -I$(includedir) -I$(ONLINE_MAIN)/include -I$(ROOTSYS)/include 
 
-lib_LTLIBRARIES = libv1742prdf.la   
+lib_LTLIBRARIES = libcaencalib.la libv1742prdf.la
 
 AM_LDFLAGS = -L$(libdir) -L$(ONLINE_MAIN)/lib -lpmonitor -lEvent -lNoRootEvent -lmessage
 
-libv1742prdf_la_LIBADD = @ROOTLIBS@ @ROOTGLIBS@
+libv1742prdf_la_LIBADD = @ROOTLIBS@ @ROOTGLIBS@ -lcaencalib
 
-noinst_HEADERS = v1742prdf.h
+include_HEADERS = \
+ v1742prdf.h 
+
+noinst_HEADERS = \
+ caen_calib.h
+
+libcaencalib_la_SOURCES = \
+  caen_calib.cc
 
 libv1742prdf_la_SOURCES = \
-        v1742prdfDict.C \
-	v1742prdf.cc
+  v1742prdfDict.C \
+  v1742prdf.cc
 
 v1742prdfDict.C: v1742prdf.h v1742prdfLinkDef.h
 	rootcint -f $@ -c $(AM_CPPFLAGS) $^
