mods for sPHENIX

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,10 @@
-AC_INIT(DigSig,1.0)
+AC_INIT([DigSig],[1.0])
+
+AC_CONFIG_MACRO_DIR([m4])
+
 #AC_CONFIG_SRCDIR()
 AM_INIT_AUTOMAKE
 
-AC_CONFIG_MACRO_DIR([m4])
 
 AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
@@ -10,7 +12,7 @@ AC_PROG_CXX([CC g++])
 
 if test $ac_cv_prog_gcc = yes; then
   CXXFLAGS="$CXXFLAGS -Wall -std=c++17"  # sphenix env
-#  CXXFLAGS="$CXXFLAGS -Wall -std=c++11"
+  #CXXFLAGS="$CXXFLAGS -Wall -std=c++11"
 fi
 
 ROOTLIBS=`root-config --libs`
